# Life-Beyond-The-WaitList

./: AI.drawio  Data Visualization.py  Matches Dataset (Actual).py  Preprocessing.py  README.md  Testing.py  app.py  patients.csv  pyproject.toml  render.yaml  requirement.txt
.streamlit/: config.toml
Dataset/: donors.csv
Result Analysis/: 3D Scatter Plot.py  Distribution Histrogram.py  Line plot.py
Training/: Decision Tree.py  Ensemble (RF+XGB+DT+LGM).py  LightGM.py  Random Forest.py  XGBoost.py
