[project]
name = "life-beyond-the-waitlist"
version = "0.1.0"
description = ""
authors = [
    {name = "Farzana Akter Mily", email = "farzanamily272@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (==1.6.1)",
    "streamlit (>=1.46.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
